bug 1189277 - Only coalesce reorder events when a previous one for the same target is obsolete. r=surkov, a=sledru

Having one reorder event that superseeds another does not mean that the
dependant mutation events for the first reorder are obsolete.  So we if we
coalesce a reorder event away we should leave its subordinate mutation events
alone.